# marl-cluster-training

./: .gitignore  Justfile  LICENSE  Makefile  README.md  pyproject.toml
configs/: bench:multiwalker.yaml  bench:multiwalker_shared.yaml  exp:kaz_qmix.yaml  exp:multiwalker_ippo.yaml  exp:multiwalker_mappo.yaml  exp:run_local.yaml  run_benchmark.yaml  run_experiment.yaml
configs/algorithm/ippo/: tuned.yaml
configs/experiment/: debug.yaml  debug_no_log.yaml  gpu.yaml  gpu_offline.yaml  no_log.yaml  test.yaml
configs/model/: mlp_relu_1.yaml  mlp_relu_3.yaml  my_mlp.yaml
configs/model/layers/: extra_mlp.yaml  mlp_relu.yaml
configs/task/kaz/: default.yaml  image.yaml  image_composed.yaml
configs/task/multiwalker/: shared.yaml  shared_composed.yaml
launch/: bench:multiwalker-cv.sh  bench:multiwalker-jz-array.sh  bench:multiwalker-jz.sh  exp:multiwalker-jz-a100.sh  exp:multiwalker-jz-debug.sh  exp:multiwalker-jz.sh  multi-exp:multiwalker-jz.sh
scripts/: kaz.py  run_benchmark.py  run_experiment.py  setup.py  utils.py
scripts/benchmarks/: multiwalker.py
scripts/experiments/: kaz_qmix.py  multiwalker_ippo.py  multiwalker_mappo.py  run_local.py
scripts/extra_mlp/: __init__.py  model.py
scripts/kaz/: config.py  task.py
src/core/task/: __init__.py  common.py  kaz_central.py
